# moneyforward

./: .gitignore  00.install.bat  01.upgrade_chromedriver.bat  02.shell.bat  LICENSE  MCP_SERVER_DESIGN.md  Pipfile  README.md  WEBAPP_SPEC.md  cf_term_data.py  fetch_large_categories.py  get_category.py  mcp_server.py  merge_csv.py  moneyforward.py  moneyforward_api.py  moneyforward_utils.py  pyproject.toml  start_mf_session.py  test_upsert_to_excel.md  test_upsert_to_excel.py  user_asset_acts.py  webapp.py
static/: script.js  style.css
templates/: index.html
